Added clock app project

--- a/src/components/Components.scss
+++ b/src/components/Components.scss
@@ -33,6 +33,10 @@
             &.ts {
                 background-color: var(--ts);
             }
+
+            &.api {
+                background-color: #1abc9c;
+            }
         }
     }
 
